# Vitrine

./: LICENSE  README.md  conftest.py  main.py  pyproject.toml  requirements.txt  桌面小组件管理器.html
_unpacked/: _template.html  _trailing.txt
core/: __main__.py  autostart.py  config.py  hub.py  logs.py  server.py  state.py
manager/: __main__.py  app.py  discovery.py  settings.py  shell.py  supervisor.py  theme.py  tray.py  ws_client.py
packaging/: README.md  build-deb.sh  control-thin.template  control.template  setup-venv.sh  vitrine.desktop  vitrine.launcher
prototype/: 小组件管理器.html
tests/: test_autostart.py  test_calendar_dashboard_smoke.py  test_calendar_demo_data_trimmed.py  test_calendar_expand_morph.py  test_calendar_expanded_style.py  test_calendar_info.py  test_calendar_paging.py  test_calendar_productivity_wiring.py  test_calendar_tasks_wiring.py  test_calendar_zoom.py  test_catalog_bridge.py  test_config.py  test_config_store.py  test_core_integration.py  test_core_supervisor.py  test_discovery.py  test_event_store.py  test_hub.py  test_logs.py  test_main_cli.py  test_manager_app_logic.py  test_manager_settings.py  test_manager_smoke.py  test_manager_tray.py  test_preview_manager.py  test_providers.py  test_qt_platform.py  test_registry.py  test_state_discovery.py  test_task_bridge.py  test_task_store.py  test_task_wiring.py  test_weather_provider.py  test_widget_windows.py  test_ws_client.py
tools/: card_preview.qml  preview_manager.py  shoot.py  smoke_tray_sync.py
ui/: GalleryCard.qml  Manager.qml  NavItem.qml  SettingsPanel.qml  Sidebar.qml  (+1 more)
(+64 files in other folders)
